add 3d model and header

--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@aws-amplify/ui-react": "^4.3.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
+    "@react-three/fiber": "^8.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/three": "^0.149.0",
     "aws-amplify": "^5.0.12",
     "aws-amplify-react": "^5.1.43",
     "react": "^18.2.0",
@@ -17,6 +20,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.0.1",
+    "three": "^0.149.0",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.0"
